--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-/* Basic Style */
+/* basic style */
 body {
   background-color: #f8f8f8;
   color: #333;
-  font-family: Lato, sans-serif;
+  font-family: lato, sans-serif;
 }
 
 .aaa {
@@ -60,16 +60,16 @@ button {
   color: #888;
   font-size: 15px;
   width: 60px;
-  font-family: Lato, sans-serif;
+  font-family: lato, sans-serif;
   cursor: pointer;
 }
 
 button:hover {
-  color: #3a3A3a;
+  color: #3a3a3a;
 }
 
 
-/* Heading */
+/* heading */
 h3,
 label[for='new-task'] {
   color: #333;
@@ -90,7 +90,7 @@ input[type="text"] {
   border: 1px solid #dDd;
   background: #FFF;
   border-radius: 6px;
-  font-family: Lato, sans-serif;
+  font-family: lato, sans-serif;
   color: #888;
 }
 
@@ -99,7 +99,7 @@ input[type="text"]:focus {
 }
 
 
-/* New Task */
+/* new task */
 label[for='new-task'] {
   display: block;
   margin: 0 0 20px;
@@ -110,7 +110,7 @@ input#new-task {
 }
 
 
-/* Task list */
+/* task list */
 li {
   overflow: hidden;
   padding: 20px 0;
@@ -141,16 +141,16 @@ li >    input[type="text"] {
 
 button.delete img {
   height: 2em;
-  transform: rotateZ(45deg);
+  transform: rotatez(45deg);
   transition: transform 200ms ease-in;
 }
 
 button.delete img:hover {
-  transform: rotateZ(0);
+  transform: rotatez(0);
 }
 
 
-/* Completed */
+/* completed */
 ul#completed-tasks label {
   text-decoration: line-through
   color: #888;
@@ -162,11 +162,11 @@ ul li input[type=text] {
   display:none
 }
 
-ul li.editMode input[type=text] {
+ul li.editmode input[type=text] {
   display:inline-block;
   width:224px
 }
 
-ul li.editMode label {
+ul li.editmode label {
   display:none;
 }
