--- a/style.css
+++ b/style.css
@@ -5,27 +5,27 @@ body {
   font-family: lato, sans-serif;
 }
 
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header .info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { text-align: center;
+  .header { text-align: center;
   }
 }
 
-.centered-main-page-element {
+.form-items {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -37,7 +37,7 @@ body {
   flex-grow: 1
 }
 
-.task-row-wrapper {
+.task-items_wrapper {
   display: flex;
 }
 
@@ -151,7 +151,7 @@ button.delete img:hover {
 
 
 /* completed */
-ul#completed-tasks label {
+ul#form-task_completed label {
   text-decoration: line-through
   color: #888;
 }
@@ -162,11 +162,11 @@ ul li input[type="text"] {
   display:none
 }
 
-ul li.editmode input[type="text"] {
+ul li.editMode input[type="text"] {
   display:inline-block;
   width:224px
 }
 
-ul li.editmode label {
+ul li.editMode label {
   display:none;
 }
