--- a/style.css
+++ b/style.css
@@ -21,8 +21,11 @@ body {
 }
 
 @media (max-width:768px) {
-  .header { text-align: center;
+  
+  .header { 
+  text-align: center;
   }
+  
 }
 
 .form-items {
