--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-items_wrapper {
@@ -49,12 +49,14 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
-  list-style:none;
+li, 
+h3 {
+  list-style: none;
 }
 
-input,button{
-  outline:none;
+input,
+button{
+  outline: none;
 }
 
 button {
@@ -138,8 +140,8 @@ li > label {
   width: 226px;
 }
 
-li >    input[type="text"] {
-  width: 226px
+li > input[type="text"] {
+  width: 226px;
 }
 
 button.delete img {
@@ -155,21 +157,21 @@ button.delete img:hover {
 
 /* completed */
 ul#form-task_completed label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 
 /* Edit Task */
 ul li input[type="text"] {
-  display:none
+  display: none;
 }
 
 ul li.editMode input[type="text"] {
-  display:inline-block;
-  width:224px
+  display: inline-block;
+  width: 224px;
 }
 
 ul li.editMode label {
-  display:none;
+  display: none;
 }
